--- a/integrador/src/pages/product/calendarStyles.css
+++ b/integrador/src/pages/product/calendarStyles.css
@@ -11,6 +11,7 @@
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.125em;
   border: none;
+  justify-self: center;
 }
 .react-calendar--doubleView {
   width: 700px;
