--- a/integrador/src/pages/reserve/calendarStyles.css
+++ b/integrador/src/pages/reserve/calendarStyles.css
@@ -12,10 +12,12 @@
   line-height: 1.125em;
   border: none;
   justify-self: center;
+  
 }
 .react-calendar--doubleView {
   width: 800px;
   height: 300px;
+  font-size: 8px;
 }
 .react-calendar--doubleView .react-calendar__viewContainer {
   display: flex;
@@ -64,7 +66,7 @@
   text-align: center;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 0.75em;
+  font-size: 12px;
 }
 abbr[title] {
   text-decoration: none;
@@ -76,9 +78,10 @@ abbr[title] {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 0.75em;
+  font-size: 5px;
   font-weight: bold;
 }
+
 .react-calendar__month-view__days__day--weekend {
   color: #d10000;
 }
