--- a/integrador/public/index.css
+++ b/integrador/public/index.css
@@ -1,3 +1,11 @@
+*{
+  font-family: 'Roboto Flex', sans-serif;
+}
+
+h1, h2, h3, h4{
+  font-family: 'Quicksand', sans-serif;
+}
+
 body{
   overflow-x: hidden;
   margin: 0;
