--- a/integrador/src/components/footer2.css
+++ b/integrador/src/components/footer2.css
@@ -13,6 +13,11 @@
     padding: 2%;
     justify-content: space-around;
 }
+@media(max-width: 430px) {
+  .footerContent{
+    padding: 0;
+  }
+}
 
 .footerLogo{
     background-color: white;
